@@ -10,6 +10,7 @@
  - increased default size for IP field (mamba/goffy)
  - fixed lang in blocks (heyula/goffy)
  - added link in blocks (heyula/goffy)
+ - fixed problem in XoopsConfirm (goffy)
 
 <h5>3.04 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
